# devblas

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  bench_driver.c  meson.build
core/include/devblas/: devblas.h
core/include/devblas/api/: backend.h  typedecls.h
core/include/devblas/kernels/: avx2.h
core/src/: meson.build  utils.c
core/src/kernels/: avx2.c  dispatch.c  meson.build
core/src/kernels/avx2/: kernel_8x8_sgemm.c  meson.build
include/devblas/: macros.h  sgemm.h
include/devblas/benchmarking/: bench.h  utils.h
include/devblas/c_api/: blas.h
include/devblas/kernels/: naive_gemm.h  tiled_gemm.h
include/devblas/types/: config.h  layout.h
src/: CMakeLists.txt  lib.rs  sgemm.cc
src/benchmarking/: bench.cc
src/c_api/: blas.cc
src/core_ds/: matrix.rs
src/kernels/: naive_gemm.cc  tiled_gemm.cc
tests/: test_sgemm.cc
